Começo da criacao da home do site

--- a/front-tcc/src/app/home/home.component.html
+++ b/front-tcc/src/app/home/home.component.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+<div class="container">
+    <div class="content">
+        <div class="logo"><i class="pi pi-hammer"></i>Domestic</div>
+        <div class="menu-item sobre">Sobre</div>
+        <div class="menu-item loc">Localização</div>
+        <div class="menu-item dif">Diferenciais</div>
+        <div class="menu-item">|</div>
+        <div class="menu-item cad"><i class="pi pi-user"></i>Área de Cadastro</div>
+    </div>
+</div>
