--- a/front-tcc/src/app/home/home.component.html
+++ b/front-tcc/src/app/home/home.component.html
@@ -8,3 +8,19 @@
         <div class="menu-item cad"><i class="pi pi-user"></i>Área de Cadastro</div>
     </div>
 </div>
+<main>
+    <div class="imagem-home">
+        <img src="https://d1muf25xaso8hp.cloudfront.net/https://img.criativodahora.com.br/2024/12/criativo-6760a97e727a7img-2024-12-166760a97e727a9.jpg?w=1000&h=&auto=compress&dpr=1&fit=max" alt="corta grama">
+        <div class="mensagem-sobre-imagem">
+            <p>Te damos o Reconhecimento que você precisava!</p>
+            <p class="domestic">Venha ser Domestic.</p>
+        </div>
+    </div>
+    <div class="video-explicativo">
+        <div class="breve-texto">
+        <p>Aqui na Domestic priorizamos o atendimento com excelência!</p>
+        <p>Com mais de 20 tipos de empregos diferentes, facilitando a sua vida.</p>
+        <p>Entendemos a necessidade e trazemos a solução de maneira prática e tecnológica.</p>
+        </div>
+    </div>
+</main>
