--- a/front-tcc/src/app/home/home.component.html
+++ b/front-tcc/src/app/home/home.component.html
@@ -1,13 +1,14 @@
 <div class="container">
     <div class="content">
         <div class="logo"><i class="pi pi-hammer"></i>Domestic</div>
-        <div class="menu-item sobre">Sobre</div>
-        <div class="menu-item loc">Localização</div>
-        <div class="menu-item dif">Diferenciais</div>
+        <div class="menu-item sobre" [routerLink]="['../sobre']">Sobre</div>
+        <div class="menu-item loc" [routerLink]="['/localizacao']">Localização</div>
+        <div class="menu-item dif" routerLink="/diferenciais">Diferenciais</div>
         <div class="menu-item">|</div>
-        <div class="menu-item cad"><i class="pi pi-user"></i>Área de Cadastro</div>
+        <div class="menu-item cad" routerLink="/cadastro"><i class="pi pi-user"></i>Área de Cadastro</div>
     </div>
 </div>
+
 <main>
     <div class="imagem-home">
         <img src="https://d1muf25xaso8hp.cloudfront.net/https://img.criativodahora.com.br/2024/12/criativo-6760a97e727a7img-2024-12-166760a97e727a9.jpg?w=1000&h=&auto=compress&dpr=1&fit=max" alt="corta grama">
@@ -24,3 +25,7 @@
         </div>
     </div>
 </main>
+
+<footer class="footer-styles">
+    <p>© CopyRight 2025 Domestic soluções que facilitam sua vida.Todos os ireitos reservados.</p>
+</footer>
