--- a/front-tcc/src/app/home/home.component.scss
+++ b/front-tcc/src/app/home/home.component.scss
@@ -6,21 +6,22 @@
 }
 
 .content {
-    background-color: #ffffff;
-    position: fixed;
+    position: fixed; 
+    top: 0; 
+    left: 0; 
+    width: 100%; 
+    background-color: #ffffff; 
+    z-index: 10; 
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
+    padding: 21px 20px;
+    height: 60px;
     font-family: cursive;
     display: flex;
     justify-content: center;
     gap: 20px;
     font-size: 17px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    padding: 21px 20px; 
-    height: 60px;
-    top: 0; 
-    left: 0; 
-    width: 100%; 
 }
-
+ 
 .logo {
     font-family: 'Times New Roman', Times, serif;
     margin-right: 30px;
@@ -38,18 +39,18 @@ i {
 }
 
 main .imagem-home {
-    overflow: visible;
+    position: relative;
     margin-top: 60px;
+    margin-top: 150px;
 }
 
 .imagem-home img {
     width: 100vw;
-    height: 800px;
+    height: 60vh;
     margin-top: 30px;
     display: block;
     object-fit: cover;
     margin-top: -10vh;
-    border-radius: 30px;
 }
 
 .mensagem-sobre-imagem {
@@ -65,24 +66,28 @@ main .imagem-home {
 }
 
 main .video-explicativo {
-    background-image: linear-gradient(to right, orange, yellow);
+    background-color: black;
     height: 500px;
-    border-radius: 30px;
     width: 100vw;
 }
 
 .breve-texto {
     text-align: center;
     font-size: 18px;
-    font-family: Arial, Helvetica, sans-serif;
+    color: aliceblue;
     width: 45%;
 }
 
 .video-explicativo {
-    display: flex; /* Usa flexbox para organizar os elementos */
-    justify-content: end; /* Espaça o conteúdo entre os dois elementos (texto e vídeo) */
-    align-items: center; /* Alinha os itens no topo */
-    gap: 20px; /* Espaçamento entre o texto e o vídeo */
+    display: flex; 
+    justify-content: end; 
+    align-items: center; 
+    gap: 20px; 
+}
+
+.footer-styles {
+    padding: 30px;
+    text-align: center;
 }
 
 
