--- a/front-tcc/src/styles.scss
+++ b/front-tcc/src/styles.scss
@@ -2,3 +2,11 @@
 
 @import "primeicons/primeicons.css";
 
+
+html, body, app-root {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+}
