pagina sobre pronta diferenciais tambem engenhoca para o footer e o menu aparecerem em todos os lugares

--- a/front-tcc/src/app/home/home.component.html
+++ b/front-tcc/src/app/home/home.component.html
@@ -1,14 +1,5 @@
-<div class="container">
-    <div class="content">
-        <div class="logo"><i class="pi pi-hammer"></i>Domestic</div>
-        <div class="menu-item sobre" [routerLink]="['../sobre']">Sobre</div>
-        <div class="menu-item loc" [routerLink]="['/localizacao']">Localização</div>
-        <div class="menu-item dif" routerLink="/diferenciais">Diferenciais</div>
-        <div class="menu-item">|</div>
-        <div class="menu-item cad" routerLink="/cadastro"><i class="pi pi-user"></i>Área de Cadastro</div>
-    </div>
-</div>
 
+<app-menu></app-menu>
 <main>
     <div class="imagem-home">
         <img src="https://d1muf25xaso8hp.cloudfront.net/https://img.criativodahora.com.br/2024/12/criativo-6760a97e727a7img-2024-12-166760a97e727a9.jpg?w=1000&h=&auto=compress&dpr=1&fit=max" alt="corta grama">
@@ -26,6 +17,4 @@
     </div>
 </main>
 
-<footer class="footer-styles">
-    <p>© CopyRight 2025 Domestic soluções que facilitam sua vida.Todos os ireitos reservados.</p>
-</footer>
+<app-footer></app-footer>
