--- a/front-tcc/src/app/sobre/sobre.component.html
+++ b/front-tcc/src/app/sobre/sobre.component.html
@@ -1,3 +1,5 @@
+
+<app-menu></app-menu>
 <main>
     <div class="imagem-sobre">
         <img src="https://blog.famyle.com/wp-content/uploads/2022/04/Design-sem-nome-1024x576.webp" alt="lavando a casa">
@@ -11,6 +13,8 @@
     <div class="content">
         <p>A Domestic foi criada para facilitar e tornar pratica a vida dos trabalhadores.</p>
         <p>Contando com mais de 700 pessoas capacitadas a tornar a sua vida mais facil!</p>
-        <p>Venha se juntar a esta grande familia. Seja Domestic</p>
+        <p>Venha se juntar a esta grande familia. Seja Domestic.</p>
     </div>
 </main>
+
+<app-footer></app-footer>
