Tela de login e cadastro começadas

--- a/front-tcc/src/app/shred/menu/menu.component.html
+++ b/front-tcc/src/app/shred/menu/menu.component.html
@@ -6,6 +6,6 @@
         <a class="menu-item loc" [routerLink]="['/localizacao']">Localização</a>
         <a class="menu-item dif" [routerLink]="['/diferenciais']">Diferenciais</a>
         <div class="menu-item">|</div>
-        <a class="menu-item cad" [routerLink]="['/cadastro']"><i class="pi pi-user"></i>Área de Cadastro</a>
+        <a class="menu-item cad" [routerLink]="['/login']"><i class="pi pi-user"></i>Área de Cadastro</a>
     </div>
 </div>
