--- a/front-tcc/src/app/diferenciais/diferenciais.component.scss
+++ b/front-tcc/src/app/diferenciais/diferenciais.component.scss
@@ -6,7 +6,7 @@
     padding: 20px; 
     margin: 0 auto; 
     height: 80vh;
-    background-color: blueviolet;
+    background-color: rgba(128, 128, 128, 0.582);
     color: aliceblue;
   }
   
