--- a/front-tcc/src/app/shred/footer/footer.component.html
+++ b/front-tcc/src/app/shred/footer/footer.component.html
@@ -1,3 +1,3 @@
 <footer class="footer-styles">
-    <p>© CopyRight 2025 Domestic soluções que facilitam sua vida.Todos os ireitos reservados.</p>
+    <p>© CopyRight 2025 Domestic soluções que facilitam sua vida.Todos os Direitos reservados.</p>
 </footer>
