--- a/front-tcc/src/app/diferenciais/diferenciais.component.html
+++ b/front-tcc/src/app/diferenciais/diferenciais.component.html
@@ -2,6 +2,14 @@
 
 <div class="container">
         <p class="first-text">Aqui na Domestic sempre procuramos tratar qualquer individuo com o maximo de respeito possivel. Temos o melhor suporte para o trbalhador considerado informal, assim chamado em muitos casos. Contamos com uma equipe especializada de suporte, prontos para qualquer desafio. Aqui seus problemas são resolvidos de forma eficiente, juntamos a tecnologia com a realidade atual.</p>
-        <p class="second-text">Nascemos do nada e depois de muitos estudos finalmente conseguimos achar uma forma de realmente ajudar aqueles que não tem seu trabalho reconhecido. Aqui na Domestic você tem acesso ha mais de 30 atividades com os profissionais com certificados da propia Domestic, muito bem qualificados. Acreditamos que para um futuro melhor todos merecem uma oportunidade!</p>    
+        <img src="https://static.mundoeducacao.uol.com.br/mundoeducacao/2020/06/atividade-informal.jpg" alt="">
 </div>
+<main>
+        <h1>Outros Pontos</h1>
+        <p class="second-text">Nascemos do nada e depois de muitos estudos finalmente conseguimos achar uma forma de realmente ajudar aqueles que não tem seu trabalho reconhecido.</p> 
+        <p> Aqui na Domestic você tem acesso ha mais de 30 atividades com os profissionais com certificados da propia Domestic, muito bem qualificados.</p>
+        <p>Acreditamos que para um futuro melhor todos merecem uma oportunidade!</p>
+</main>
+
+
 <app-footer></app-footer>
