--- a/front-tcc/src/app/sobre/sobre.component.scss
+++ b/front-tcc/src/app/sobre/sobre.component.scss
@@ -36,4 +36,5 @@ main .imagem-sobre {
   text-align: center;
   font-size: 15px;font-family: Arial, Helvetica, sans-serif;
   line-height: 1.1;
+  font-size: 20px;
 }
