Cep automatico cadastrado

--- a/front-tcc/src/app/home/home.component.scss
+++ b/front-tcc/src/app/home/home.component.scss
@@ -11,6 +11,7 @@ main .imagem-home {
     display: block;
     object-fit: cover;
     margin-top: -10vh;
+    filter: brightness(60%);
 }
 
 .mensagem-sobre-imagem {
