--- a/front-tcc/src/app/cadastro-cliente/cadastro-cliente.component.html
+++ b/front-tcc/src/app/cadastro-cliente/cadastro-cliente.component.html
@@ -1,20 +1,52 @@
-
-
 <div class="container">
     <div class="content">
-        <form action="">
-            <div class="header">
-                <h1>Cadastre-se</h1>
-            </div>
-            <div class="login-button">
-                <button><a>Cadastrar</a></button>
+        <h1>Cadstre-se</h1>
+        <form [formGroup]="form">
+            <div class="input">
+                <div class="grupo-input">
+                    <label for="nome">Nome</label>
+                    <input type="text" id="nome" placeholder="Digite seu nome" required>
+                </div>
+                <div class="grupo-input">
+                    <label for="sobrenome">Sobrenome</label>
+                    <input type="text" id="sobrenome" placeholder="Digite seu sobrenome" required>
+                </div>
             </div>
 
-            <div class="inputs">
-                
+            <div class="input">
+                <div class="grupo-input">
+                    <label for="email">E-mail</label>
+                    <input type="email" id="email" placeholder="exemplo123@gmail.com" required>
+                </div>
+                <div class="grupo-input">
+                    <label for="telefone">Telefone</label>
+                    <input type="text" id="telefone" placeholder="(xx) xxxxx-xxxx" required>
+                </div>
+            </div>
+            <div class="input">
+                <div class="grupo-input">
+                    <label for="cep">CEP</label>
+                    <input formControlName="cep" type="text" id="cep" placeholder="Digite o CEP" required>
+                </div>
+                <div class="grupo-input">
+                    <label for="logradouro">Logradouro</label>
+                    <input  formControlName="logradouro" type="text" id="logradouro" placeholder="Digite o logradouro">
+                </div>
+            </div>
+            <div class="input">
+                <div class="grupo-input">
+                    <label for="bairro">Bairro</label>
+                    <input  formControlName="bairro" type="text" id="bairro" placeholder="Digite o bairro">
+                </div>
+                <div class="grupo-input">
+                    <label for="cidade">Cidade</label>
+                    <input  formControlName="cidade" type="text" id="cidade" placeholder="Digite a cidade" required>
+                </div>
+                <div class="grupo-input">
+                    <label for="estado">Estado</label>
+                    <input  formControlName="estado" type="text" id="estado" placeholder="Estado" required>
+                </div>
             </div>
         </form>
     </div>
 </div>
-
-<app-footer></app-footer>
