--- a/front-tcc/src/app/cadastro-cliente/cadastro-cliente.component.scss
+++ b/front-tcc/src/app/cadastro-cliente/cadastro-cliente.component.scss
@@ -1,6 +1,17 @@
 .container {
-    height: 100vh;
-    background-color: #0f0c25;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
+.input {
+    display: flex;
+    gap: 15px;
+    margin-bottom: 15px;
+}
 
+.grupo-input {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+  }
