--- a/front-tcc/src/app/diferenciais/diferenciais.component.scss
+++ b/front-tcc/src/app/diferenciais/diferenciais.component.scss
@@ -6,9 +6,7 @@
     padding: 20px; 
     margin: 0 auto; 
     height: 80vh;
-    color: aliceblue;
-    color: #f1f1f1;
-    background-color: black;
+    color: black;
   }
   
 .container p {
